fixing truncate word

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,11 @@
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --font-family-poppins: 'Poppins', sans-serif;
+
+
+}
+body {
+  font-family: var(--font-family-poppins);
 }
 .loader {
   width: 48px;
